--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ button[type="submit"]:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 10px;
 }
 
 h1{
